--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,5 +10,8 @@ html(lang="en")
         header
             h1 It works
         main
-            h2 Weclome to Noom
+            ul
+            form
+                input(type="text" , placeholder="write a msg" , required)
+                button send
         script(src="/public/js/app.js") 
